--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -105,6 +105,15 @@
       "title": "Your Error Report Was not send",
       "msg": "There was problem sending your error report"
     },
+    "confirm-transaction-sign": {
+      "unknown": "Unknown",
+      "contract-create": "Contract create",
+      "aens": "AENS"
+    },
+    "add-token": {
+      "title": "Token added",
+      "msg": "Token added succefully"
+    },
     "cancel": "Cancel",
     "confirm": "Confirm",
     "ok": "OK"
@@ -169,7 +178,12 @@
       "networks": "Networks",
       "comment-new": "Add comment",
       "home": "Superhero Home",
-      "donate-error": "Donate Data"
+      "donate-error": "Donate Data",
+      "fungible-tokens": "Fungible tokens",
+      "deploy-token": "Deploy token",
+      "add-token": "Add token",
+      "mint-burn-token": "Mint/Burn token",
+      "allowances": "Allowances"
     },
     "appVUE": {
       "systemName": "Superhero",
@@ -203,7 +217,8 @@
       "names": "Names",
       "networks": "Networks",
       "removeAccount": "Remove account",
-      "donateErrorReports": "Submit error reports"
+      "donateErrorReports": "Submit error reports",
+      "tokens": "Fungible tokens"
     },
     "aboutSettings": {
       "heading": "About",
@@ -260,22 +275,15 @@
       "viewAll": "View all",
       "noTransactionsFound": "No transactions found!"
     },
-    "addFungibleToken": {
+    "add-fungible-token": {
       "heading": "Fungible Tokens",
-      "backToFungibleTokens": "Back to Fungible Tokens",
-      "addToken": "Add token",
-      "tokenContractLabel": "Token Contract Address",
-      "tokenSymbolLabel": "Token Symbol",
-      "tokenPrecision": "Decimals of Precision",
+      "add": "Add token",
+      "contract-label": "Token Contract Address",
+      "symbol-label": "Token Symbol",
+      "decimals-label": "Decimals of Precision",
       "next": "Next",
-      "validContractAddressError": "Valid token contract address",
-      "symbolBetween1and12": "Symbol between 1 and 12 characters",
-      "numberBetween0and36": "Number between 0 and 36",
       "token": "Token",
-      "balance": "Balance",
-      "search": "Search",
-      "customToken": "Custom Token",
-      "tokenSearchLabel": "Search Token"
+      "balance": "Balance"
     },
     "advancedSettings": {
       "heading": "Advanced",
@@ -304,26 +312,22 @@
     "allowances": {
       "heading": "Allowances",
       "backToUtilities": "Back to utilities",
-      "createAllowance": "Create allowance",
-      "createAllowanceInfo": "This allows you to create allowance with your new fungible tokens for anyone you want",
-      "createButton": "Create",
-      "transferAllowance": "Transfer allowance",
-      "transferAllowanceInfo": "This allows you to take your whole allowance or part of it from someone",
-      "transferButton": "Transfer",
-      "allAllowances": "All allowances",
-      "allAllowancesInfo": "See all your allowances and take them",
-      "seeAllButton": "See all",
-      "backToAllowances": "Back to Allowances",
-      "chooseToken": "Choose a token",
-      "allowanceExistMsg": "This Allowance already exist. If you want to change it click",
-      "allowanceExistHere": "here",
-      "allowanceFrom": "From",
-      "getAllowance": "Get it",
-      "tokenChoiceRequired": "Please choose a token to see all your allowances!",
-      "noAllowancesFound": "No allowances found!",
-      "changeAllowance": "Change Allowance",
-      "allowedAllowanceAmount": "Current allowed allowance amount is",
-      "changeButton": "Change"
+      "create-allowance": "Create allowance",
+      "create-allowance-info": "This allows you to create allowance with your new fungible tokens for anyone you want",
+      "transfer-allowance": "Transfer allowance",
+      "transfer-allowance-info": "This allows you to take your whole allowance or part of it from someone",
+      "all-allowances": "All allowances",
+      "all-allowances-info": "See all your allowances and take them",
+      "from": "From",
+      "get-allowance": "Get allowance",
+      "no-allowances-found": "No allowances found"
+    },
+    "manage-allowances": {
+      "allowance-exist": "Allowance exist",
+      "here": "here",
+      "create": "Create allowance",
+      "transfer": "Transfer allowance",
+      "change": "Change allowance"
     },
     "auctionBid": {
       "backToAuctions": "Back to auctions",
@@ -347,16 +351,6 @@
       "addressesLabel": "Addresses",
       "addressesRequest": "This aepp is requesting access to view your account addresses"
     },
-    "createFungibleToken": {
-      "backToFungibleTokens": "Back to Fungible Tokens",
-      "heading": "Create Fungible Token",
-      "tokenName": "Token Name",
-      "tokenSymbolLabel": "Token Symbol",
-      "initialSupply": "Initial Supply",
-      "tokenPrecision": "Decimals of Precision",
-      "deployTokenContract": "Deploy Token Contract",
-      "registryFee": "Include token in global TokenRegistry (tx fees apply)"
-    },
     "fungibleTokens": {
       "backToAccount": "Back to account",
       "addHeading": "Fungible Tokens",
@@ -372,24 +366,33 @@
       "token": "Token",
       "balance": "Balance"
     },
-    "fungibleTokensPage": {
-      "backToUtilities": "Back to utilities",
-      "heading": "Fungible Tokens",
-      "addFungToken": "Add Fungible Token",
-      "tokenInfo": "This allows you to add token from given deployed fungible token contract",
-      "addTokenButton": "Add Token",
-      "deployInfo": "This allows you to deploy your own fungible token contract",
-      "deployButton": "Deploy Token Contract",
-      "deployFungToken": "Deploy Token"
-    },
-    "mintTokenPage": {
+    "fungible-tokens": {
+      "add": "Add Fungible Token",
+      "add-info": "This allows you to add token from given deployed fungible token contract",
+      "deploy": "Deploy Token",
+      "deploy-info": "This allows you to deploy your own fungible token contract",
+      "allowances": "Allowances",
+      "allowances-info": "Give or take an allowance",
       "mint": "Mint/Burn token",
-      "mintInfo": "This allows you to mint or burn token amount",
-      "mintBtn": "Mint/Burn",
+      "mint-info": "This allows you to mint or burn token amount"
+    },
+    "deploy-token": {
+      "name": "Token name",
+      "symbol": "Token symbol",
+      "initial-supply": "Token initial supply",
+      "decimals": "Token decimals",
+      "registry-fee": "Include token in global TokenRegistry (tx fees apply)",
+      "extensions": "Token extensions",
+      "deploy": "Deploy",
+      "require-burnable": "Attention! Swappable requires burnable!",
+      "advanced": "Advanced"
+    },
+    "mint-token": {
+      "mint": "Mint/Burn token",
       "amount": "Amount",
       "address": "Address",
-      "enterAmount": "Invalid amount",
-      "enterAddress": "Enter address"
+      "type": "Select type",
+      "token": "Select token"
     },
     "namingSystemPage": {
       "heading": "Naming System",
